Re-created conversion host config and improved transition sentences.

--- a/doc-V2V_Guide/cfme/doc/assembly_Troubleshooting.adoc
+++ b/doc-V2V_Guide/cfme/doc/assembly_Troubleshooting.adoc
@@ -35,11 +35,10 @@ If you create an infrastructure mapping and subsequently add or remove providers
 +
 Authorize the xref:Authenticating_RHV_Manager_and_Hosts[RHV hosts].
 
-* RHV conversion host tags not set correctly.*(%AP: Can this happen if the user is configuring the conversion host with conversion_host.yml?)*
+* RHV conversion host tags not set correctly.
 +
-Set the appropriate tags for the RHV conversion hosts.
-Ensure RHV hosts are configured as conversion hosts.
-Run the Conversion_host_check.yml playbook to verify.
+Set the xref:Configuring_rhv_conversion_hosts[appropriate tags] for the RHV conversion hosts.
+Ensure that the RHV hosts are configured as conversion hosts by running the `conversion_host_check` playbook.
 
 * Incorrect attributes in the virtual machine CSV import file.
 +
