--- a/doc-V2V_Guide/cfme/doc/modules/proc_Adding_hosts_to_the_RHV_environment.adoc
+++ b/doc-V2V_Guide/cfme/doc/modules/proc_Adding_hosts_to_the_RHV_environment.adoc
@@ -1,5 +1,5 @@
-[[Adding_hosts_to_the_Manager]]
-= Adding Hosts to the Red Hat Virtualization Manager
+[[Adding_hosts_to_the_RHV_environment]]
+= Adding Hosts to the Red Hat Virtualization Environment
 
 Adding hosts to your Red Hat Virtualization environment can take some time, as the following steps are completed by the platform: virtualization checks, installation of packages, and creation of a bridge.
 
@@ -19,3 +19,5 @@ The new host appears in the list of hosts with the status, `Installing`, and you
 ====
 Keep the environment up-to-date. See link:https://access.redhat.com/articles/2974891[] for more information. Since bug fixes for known issues are frequently released, Red Hat recommends using scheduled tasks to update the hosts and the Manager.
 ====
+
+After adding the hosts to the Red Hat Virtualization environment, you can attach a storage domain.
