--- a/doc-V2V_Guide/cfme/doc/modules/proc_Adding_other_storage.adoc
+++ b/doc-V2V_Guide/cfme/doc/modules/proc_Adding_other_storage.adoc
@@ -25,7 +25,7 @@ See:
 
 * link:https://access.redhat.com/documentation/en-US/Red_Hat_Enterprise_Linux/7/html/Storage_Administration_Guide/ch24.html[Online Storage Management] in the Red Hat Enterprise Linux _Storage Administration Guide_ for general information.
 
-include::ref_Storage_to_CF_link.adoc[]
+include::ref_Storage_link.adoc[]
 
 [[fc]]
 [discrete]
@@ -41,7 +41,7 @@ See:
 
 * link:https://access.redhat.com/documentation/en-US/Red_Hat_Enterprise_Linux/7/html/Storage_Administration_Guide/ch24.html[Online Storage Management] in the Red Hat Enterprise Linux _Storage Administration Guide_ for general information.
 
-include::ref_Storage_to_CF_link.adoc[]
+include::ref_Storage_link.adoc[]
 
 [[FCoE]]
 [discrete]
@@ -57,7 +57,7 @@ See:
 
 * link:https://access.redhat.com/documentation/en-US/Red_Hat_Enterprise_Linux/7/html/Storage_Administration_Guide/ch24.html[Online Storage Management] in the Red Hat Enterprise Linux _Storage Administration Guide_ for general information.
 
-include::ref_Storage_to_CF_link.adoc[]
+include::ref_Storage_link.adoc[]
 
 [[Gluster]]
 [discrete]
@@ -75,7 +75,7 @@ See:
 
 * link:https://access.redhat.com/documentation/en-us/red-hat-gluster-storage/[Red Hat Gluster Storage] for general information.
 
-include::ref_Storage_to_CF_link.adoc[]
+include::ref_Storage_link.adoc[]
 
 [[Ceph]]
 [discrete]
@@ -85,7 +85,7 @@ Red Hat Ceph File System (CephFS) is a file system compatible with POSIX standar
 
 * link:https://access.redhat.com/documentation/en-us/red_hat_virtualization/4.2/html-single/administration_guide/#sect-Preparing_and_Adding_POSIX_Compliant_File_System_Storage[Adding POSIX Compliant File System Storage] in the Red Hat Virtualization _Administration Guide_.
 
-include::ref_Storage_to_CF_link.adoc[]
+include::ref_Storage_link.adoc[]
 
 [[POSIX]]
 [discrete]
@@ -99,7 +99,7 @@ See:
 
 * link:https://access.redhat.com/documentation/en-us/red_hat_virtualization/4.2/html-single/administration_guide/#sect-Preparing_and_Adding_POSIX_Compliant_File_System_Storage[Adding POSIX Compliant File System Storage] in the Red Hat Virtualization _Administration Guide_.
 
-include::ref_Storage_to_CF_link.adoc[]
+include::ref_Storage_link.adoc[]
 
 [[local]]
 [discrete]
@@ -111,4 +111,4 @@ For Red Hat Virtualization Hosts, local storage should always be defined on a fi
 
 See: link:https://access.redhat.com/documentation/en-us/red_hat_virtualization/4.2/html-single/administration_guide/#sect-Preparing_and_Adding_Local_Storage[Preparing and Adding Local Storage] in the Red Hat Virtualization _Administration Guide_.
 
-include::ref_Storage_to_CF_link.adoc[]
+include::ref_Storage_link.adoc[]
