--- a/doc-V2V_Guide/cfme/doc/modules/proc_Configuring_CloudForms.adoc
+++ b/doc-V2V_Guide/cfme/doc/modules/proc_Configuring_CloudForms.adoc
@@ -32,4 +32,4 @@ This option creates a logical volume using this device and mounts the volume to 
 . Enter `Y` to select *Should this appliance run as a standalone database server?*
 . Create and confirm a password for the database.
 
-CloudForms configures its internal database.
+After CloudForms configures its internal database, you can configure the Red Hat Virtualization conversion hosts.
