--- a/doc-V2V_Guide/cfme/doc/modules/proc_Connecting_to_the_Administration_Portal.adoc
+++ b/doc-V2V_Guide/cfme/doc/modules/proc_Connecting_to_the_Administration_Portal.adoc
@@ -16,3 +16,5 @@ Keep the environment up-to-date. See link:https://access.redhat.com/articles/297
 ====
 
 To log out of the Red Hat Virtualization Administration Portal, click your user name in the header bar and select *Sign Out*. You are logged out of all portals and the Manager welcome screen is displayed.
+
+After installing the Manager and logging into the Administration Portal, you can install the Red Hat Virtualization Hosts.
