--- a/doc-V2V_Guide/cfme/doc/modules/proc_Creating_an_Infrastructure_Mapping.adoc
+++ b/doc-V2V_Guide/cfme/doc/modules/proc_Creating_an_Infrastructure_Mapping.adoc
@@ -12,4 +12,6 @@ Create an infrastructure mapping to map your VMware resources to Red Hat Virtual
 . Click *Add Mapping* and *Next*.
 . Select a source network and a target network.
 . Click *Add Mapping* and *Create*.
-. If a successful mapping message is displayed, click *Close*. Your infrastructure mapping is displayed in menu:Compute[Migration > Overview] and you can create a migration plan.
+. If a successful mapping message is displayed, click *Close*. Your infrastructure mapping is displayed in menu:Compute[Migration > Overview].
+
+After creating an infrastructure mapping, you can create a migration plan.
