--- a/doc-V2V_Guide/cfme/doc/modules/proc_Creating_and_Running_a_Migration_Plan.adoc
+++ b/doc-V2V_Guide/cfme/doc/modules/proc_Creating_and_Running_a_Migration_Plan.adoc
@@ -1,10 +1,7 @@
 [[Creating_a_Migration_Plan]]
 = Creating and Running a Migration Plan
 
-[discrete]
-== Prerequisites
-
-* If you are migrating a large number of virtual machines or you are re-migrating virtual machines after a failed migration, you must create a CSV file of virtual machines to import.
+If you are migrating a large number of virtual machines or you are re-migrating virtual machines after a failed migration, you must create a CSV file of virtual machines to import.
 +
 The CSV file specifies the virtual machine names (mandatory) and providers (optional, for differentiating virtual machines with identical names), in the following format:
 +
@@ -17,7 +14,7 @@ _vm03_, _vSphere3_
 ...
 ----
 
-* If you are migrating a small number of virtual machines, follow the procedure below. The migration plan discovers the virtual machines, which you select manually.
+If you are migrating a small number of virtual machines, follow the procedure below. The migration plan discovers the virtual machines, which you select manually.
 
 [discrete]
 == Procedure
