--- a/doc-V2V_Guide/cfme/doc/modules/proc_Installing_Red_Hat_Virtualization_Hosts.adoc
+++ b/doc-V2V_Guide/cfme/doc/modules/proc_Installing_Red_Hat_Virtualization_Hosts.adoc
@@ -63,4 +63,4 @@ When RHVH restarts, `nodectl check` performs a health check on the host and disp
 # subscription-manager repos --enable=rhel-7-server-rhvh-4-rpms
 ----
 
-You can now add hosts to your Red Hat Virtualization environment.
+After installing the Red Hat Virtualization hosts, you can add the hosts to your Red Hat Virtualization environment.
