--- a/doc-V2V_Guide/cfme/doc/modules/proc_Installing_Red_Hat_Virtualization_Manager.adoc
+++ b/doc-V2V_Guide/cfme/doc/modules/proc_Installing_Red_Hat_Virtualization_Manager.adoc
@@ -287,4 +287,4 @@ You must have an NTP service, such as chrony, installed and running.
 
 . Install the certificate authority according to the instructions provided by your browser. You can obtain the certificate authority's certificate by going to +http://_your-manager-fqdn_/ovirt-engine/services/pki-resource?resource=ca-certificate&amp;format=X509-PEM-CA+, replacing +_your-manager-fqdn_+ with the fully qualified domain name (FQDN) that you provided during the installation.
 
-Proceed to the next section to connect to the Administration Portal as the *admin@internal* user.
+After installing the Manager, you can connect to the Administration Portal as the *admin@internal* user.
