--- a/doc-V2V_Guide/cfme/doc/modules/proc_Installing_cloudforms_automatically.adoc
+++ b/doc-V2V_Guide/cfme/doc/modules/proc_Installing_cloudforms_automatically.adoc
@@ -3,9 +3,6 @@
 
 Red Hat CloudForms is installed with Ansible. The Ansible roles are located in +/usr/share/doc/ovirt-ansible-roles-_version_/examples+ on the Manager machine.
 
-[discrete]
-== Prerequisites
-
 The machine on which CloudForms will be installed should have the following minimum configuration:
 
 * 16 GB memory
@@ -63,7 +60,7 @@ You will be asked for a vault password.
 # ansible-playbook --ask-vault-pass manageiq.yml
 ----
 
-After installing CloudForms, you will configure the RHV conversion hosts.
+After installing CloudForms, you can create the RHV conversion hosts.
 
 [discrete]
 == Additional resources
