--- a/doc-V2V_Guide/cfme/doc/modules/proc_Logging_into_CloudForms.adoc
+++ b/doc-V2V_Guide/cfme/doc/modules/proc_Logging_into_CloudForms.adoc
@@ -12,3 +12,5 @@ After CloudForms is configured, log in to ensure that you can access CloudForms,
 . Enter a new password in the *New Password* field.
 . Repeat your new password in the *Verify Password* field.
 . Click *Login*.
+
+After you have changed the default password, you can begin the discovery process.
