--- a/doc-V2V_Guide/cfme/doc/modules/proc_Authenticating_RHV_Manager_and_hosts.adoc
+++ b/doc-V2V_Guide/cfme/doc/modules/proc_Authenticating_RHV_Manager_and_hosts.adoc
@@ -22,3 +22,5 @@ You can select all hosts using the *Check All* option.
 . In the *Credentials* area, enter the *Default* credentials. This field is mandatory. Users should have privileged access such as `root` or `administrator`.
 . Click *Validate*.
 . Click *Add*.
+
+After authenticating the Manager and hosts with CloudForms, you can begin the migration process.
