started adding ISO domain

--- a/doc-V2V_Guide/cfme/doc/assembly_Planning.adoc
+++ b/doc-V2V_Guide/cfme/doc/assembly_Planning.adoc
@@ -17,6 +17,13 @@ A well-planned migration is critical for success. During the planning process, y
 == Best Practices
 
 * Keep linked applications together and migrate at the same time.
+* Consider which parts of the workload to migrate first:
+
+** Databases
+** Applications
+** Web servers
+** Load balancers
+
 * Move critical applications during maintenance windows.
 * Plan for redundancy.
 * Ensure that you have sufficient space for the migration. The migration process does not delete the original virtual machines.
