--- a/doc-V2V_Guide/cfme/doc/ref_Troubleshooting.adoc
+++ b/doc-V2V_Guide/cfme/doc/ref_Troubleshooting.adoc
@@ -1,4 +1,4 @@
-[id='assembly_Troubleshooting']
+[id='ref_Troubleshooting']
 = Troubleshooting
 
 [discrete]
@@ -33,15 +33,12 @@ If you create an infrastructure mapping and subsequently add or remove providers
 
 * RHV host credentials are not set in CloudForms.
 +
-Authorize the xref:Authenticating_RHV_Manager_and_Hosts[RHV hosts].
+Authorize the RHV hosts. See xref:Authenticating_RHV_Manager_and_Hosts[].
 
 * RHV conversion host tags not set correctly.
 +
-Set the xref:Configuring_rhv_conversion_hosts[appropriate tags] for the RHV conversion hosts.
-Ensure that the RHV hosts are configured as conversion hosts by running the `conversion_host_check` playbook.
+Set the appropriate tags for the RHV conversion hosts. Run the `conversion_host_check` playbook to verify that the RHV hosts are configured correctly. See xref:Configuring_rhv_conversion_hosts[].
 
 * Incorrect attributes in the virtual machine CSV import file.
 +
 Check the CloudForms migration log to identify the errors. Create a new migration plan, import the correct CSV file, and run the migration plan.
-
-https://github.com/RedHatDemos/RHS-Optimize_IT-Infrastructure_Migration/blob/master/docs/01-redhat_solutions-insfrastructure_migration_v2-troubleshooting.adoc
