--- a/doc-V2V_Guide/cfme/master.adoc
+++ b/doc-V2V_Guide/cfme/master.adoc
@@ -18,4 +18,4 @@ include::doc/assembly_Installation.adoc[leveloffset=+1]
 include::doc/assembly_Discovery.adoc[leveloffset=+1]
 include::doc/assembly_Planning.adoc[leveloffset=+1]
 include::doc/assembly_Migration.adoc[leveloffset=+1]
-include::doc/assembly_Troubleshooting.adoc[leveloffset=+1]
+include::doc/ref_Troubleshooting.adoc[leveloffset=+1]
