Installation replaced by Prerequisites.

--- a/doc-V2V_Guide/cfme/doc/assembly_Discovery.adoc
+++ b/doc-V2V_Guide/cfme/doc/assembly_Discovery.adoc
@@ -13,7 +13,7 @@ The discovery stage is critical for planning your migration. It will help you to
 The discovery procedure has 2 key stages:
 
 * Discover the VMware and Red Hat Virtualization infrastructure providers.
-* Authenticate Red Hat Virtualization Manager and hosts.
+* Authenticate the Red Hat Virtualization Manager and hosts.
 
 include::modules/proc_Discovering_infrastructure_providers.adoc[leveloffset=+1]
 include::modules/proc_Authenticating_RHV_Manager_and_hosts.adoc[leveloffset=+1]
