--- a/doc-V2V_Guide/cfme/doc/assembly_Migration.adoc
+++ b/doc-V2V_Guide/cfme/doc/assembly_Migration.adoc
@@ -1,13 +1,6 @@
 [[Migration]]
 = Migration
 
-*TBD*: Diagram from https://github.com/RedHatDemos/RHS-Optimize_IT-Infrastructure_Migration/blob/master/docs/00-redhat_solutions-insfrastructure_migration_v2-deployment.adoc#vm-migration-workflow to be inserted here.
-
-*TBD*:
-
-* How long will the migration take?
-* How to estimate remaining migration time
-
-
+include::modules/con_Migration_overview.adoc[leveloffset=+1]
 include::modules/proc_Creating_an_Infrastructure_Mapping.adoc[leveloffset=+1]
 include::modules/proc_Creating_and_Running_a_Migration_Plan.adoc[leveloffset=+1]
