--- a/doc-V2V_Guide/cfme/doc/modules/proc_Authenticating_RHV_Manager_and_hosts.adoc
+++ b/doc-V2V_Guide/cfme/doc/modules/proc_Authenticating_RHV_Manager_and_hosts.adoc
@@ -1,4 +1,5 @@
 [[Authenticating_RHV_Manager_and_Hosts]]
+[discrete]
 = Authenticating Red Hat Virtualization Manager and Hosts
 
 Authenticate the Manager so that CloudForms can connect to it:
