--- a/doc-V2V_Guide/cfme/doc/modules/proc_Configuring_rhv_conversion_hosts.adoc
+++ b/doc-V2V_Guide/cfme/doc/modules/proc_Configuring_rhv_conversion_hosts.adoc
@@ -1,8 +1,8 @@
-
 [id="Configuring_rhv_conversion_hosts"]
-= Configuring Red Hat Virtualization Conversion Hosts
+[discrete]
+= Configuring RHV Conversion Hosts
 
-Configure the Red Hat Virtualization conversion hosts:
+Configure the RHV conversion hosts:
 
 . In CloudForms, go to menu:Compute[Infrastructure > Hosts].
 . Select a Red Hat Virtualization Host.
@@ -13,5 +13,3 @@ Configure the Red Hat Virtualization conversion hosts:
 . Select the same host, click the `Configuration` drop-down button, and select `Edit this item`.
 . In the `Default` tab of the Endpoints section, enter the Username `root` and the password.
 . Click `Validate`. If a success message is displayed, click `Save`.
-
-After configuring the RHV conversion hosts, you can log into CloudForms.
