--- a/doc-V2V_Guide/cfme/doc/modules/proc_Discovering_infrastructure_providers.adoc
+++ b/doc-V2V_Guide/cfme/doc/modules/proc_Discovering_infrastructure_providers.adoc
@@ -1,4 +1,5 @@
 [[Discovering_infrastructure_providers]]
+[discrete]
 = Discovering Infrastructure Providers
 
 Discover your infrastructure providers in a defined subnet range:
