--- a/doc-V2V_Guide/cfme/doc/ref_Troubleshooting.adoc
+++ b/doc-V2V_Guide/cfme/doc/ref_Troubleshooting.adoc
@@ -29,16 +29,16 @@ If a migration plan does not complete successfully, check the logs for errors:
 
 * Incorrect infrastructure mapping.
 +
-If you create an infrastructure mapping and subsequently add or remove providers or provider objects, the infrastructure mapping will not work. This is because the object IDs of the providers and their objects have changed. You must delete the infrastructure mapping and re-create it.
+If you create an infrastructure mapping and subsequently add or remove providers or provider objects, the infrastructure mapping will not work. This is because the object IDs of the providers and their objects have changed. Solution: Delete the infrastructure mapping and re-create it.
 
 * RHV host credentials are not set in CloudForms.
 +
-Authorize the RHV hosts. See xref:Authenticating_RHV_Manager_and_Hosts[].
+If the RHV host credentials are not set, CloudForms is unable to communicate with the hosts. Solution: Authenticate the RHV hosts with CloudForms. See xref:Authenticating_RHV_Manager_and_Hosts[].
 
 * RHV conversion host tags not set correctly.
 +
-Set the appropriate tags for the RHV conversion hosts. Run the `conversion_host_check` playbook to verify that the RHV hosts are configured correctly. See xref:Configuring_rhv_conversion_hosts[].
+If the conversion host tags are not set, the migration will fail. Solution: Set the appropriate tags for the RHV conversion hosts and run the `conversion_host_check` playbook to verify that the RHV hosts are configured correctly. See xref:Configuring_rhv_conversion_hosts[Creating RHV Conversion Hosts].
 
 * Incorrect attributes in the virtual machine CSV import file.
 +
-Check the CloudForms migration log to identify the errors. Create a new migration plan, import the correct CSV file, and run the migration plan.
+Solution: Create a new migration plan, import the correct CSV file, and run the migration plan.
