--- a/doc-V2V_Guide/cfme/master.adoc
+++ b/doc-V2V_Guide/cfme/master.adoc
@@ -14,7 +14,7 @@ include::common/attributes/cfme.adoc[]
 
 :numbered:
 include::doc/con_Introduction.adoc[leveloffset=+1]
-include::doc/assembly_Installation.adoc[leveloffset=+1]
+include::doc/con_Prerequisites.adoc[leveloffset=+1]
 include::doc/assembly_Discovery.adoc[leveloffset=+1]
 include::doc/assembly_Planning.adoc[leveloffset=+1]
 include::doc/assembly_Migration.adoc[leveloffset=+1]
