Started discovery section

--- a/doc-V2V_Guide/cfme/doc/con_Introduction.adoc
+++ b/doc-V2V_Guide/cfme/doc/con_Introduction.adoc
@@ -18,7 +18,7 @@ The infrastructure migration is performed with Red Hat CloudForms. CloudForms is
 The infrastructure migration has 4 key stages:
 
 * Prerequisites: Installing Red Hat Virtualization, Red Hat Virtualization Host, and Red Hat CloudForms. Creating and configuring RHV conversion hosts.
-* Discovery: Discovering the VMware and RHV infrastructure providers and resources.
+* Discovery: Discovering your environment to plan your migration.
 * Planning: Planning for Migration.
 * Migration: Creating an infrastructure mapping, creating and running a migration plan.
 * Troubleshooting: Re-migrating virtual machines, log files, common issues or mistakes.
