--- a/doc-V2V_Guide/cfme/doc/ref_Troubleshooting.adoc
+++ b/doc-V2V_Guide/cfme/doc/ref_Troubleshooting.adoc
@@ -33,7 +33,7 @@ If you create an infrastructure mapping and subsequently add or remove providers
 
 * RHV host credentials are not set in CloudForms.
 +
-If the RHV host credentials are not set, CloudForms is unable to communicate with the hosts. Solution: Authenticate the RHV hosts with CloudForms. See xref:Authenticating_RHV_Manager_and_Hosts[].
+If the RHV host credentials are not set, CloudForms is unable to communicate with the hosts. Solution: Authenticate the RHV hosts with CloudForms. See link:https://access.redhat.com/documentation/en-us/red_hat_cloudforms/4.6/html-single/managing_providers/#authenticating_rhv_hosts[Authenticating Red Hat Virtualization Hosts] in  _Managing Providers_.
 
 * RHV conversion host tags not set correctly.
 +
