--- a/doc-V2V_Guide/cfme/doc/modules/con_Prerequisites.adoc
+++ b/doc-V2V_Guide/cfme/doc/modules/con_Prerequisites.adoc
@@ -3,13 +3,12 @@
 
 Before migrating your VMware system, your environment must have the following:
 
+* Network prerequisites (TBD)
+
 * Red Hat Virtualization Manager 4.2.4 or later installed. See the link:https://access.redhat.com/documentation/en-us/red_hat_virtualization/4.2/html/planning_and_prerequisites_guide/[Red Hat Virtualization Planning and Prerequisites Guide] and link:https://access.redhat.com/documentation/en-us/red_hat_virtualization/4.2/html-single/installation_guide/#part-Installing_the_Red_Hat_Virtualization_Manager[Installing the Red Hat Virtualization Manager] in the _Red Hat Virtualization Installation Guide_.
 
 * Red Hat Virtualization Hosts 4.2.4 or later installed. See  link:https://access.redhat.com/documentation/en-us/red_hat_virtualization/4.2/html-single/installation_guide/#Installing_RHVH[Installing Red Hat Virtualization Host] in the _Red Hat Virtualization Installation Guide_.
 
-* Red Hat CloudForms 4.6.4 or later installed. See  link:https://access.redhat.com/documentation/en-us/red_hat_cloudforms/4.6/html/installing_red_hat_cloudforms_on_red_hat_virtualization/[Installing Red Hat CloudForms on Red Hat Virtualization].
+* Red Hat CloudForms 4.6.4 or later installed. See  link:https://access.redhat.com/documentation/en-us/red_hat_cloudforms/4.6/html/installing_red_hat_cloudforms_on_red_hat_virtualization/[Installing Red Hat CloudForms on Red Hat Virtualization],  link:https://access.redhat.com/documentation/en-us/red_hat_cloudforms/4.6/html-single/managing_providers/#red_hat_virtualization_providers[Red Hat Virtualization Providers] for installation instructions. After installing CloudForms, add the VMware and Red Hat Virtualization environments to CloudForms, as described in  link:https://access.redhat.com/documentation/en-us/red_hat_cloudforms/4.6/html-single/managing_providers/#vmware_vcenter_providers[VMware vCenter Providers] in _Managing Providers_.
 
 * RHV conversion hosts created and configured. The following sections describe how to create and configure the RHV conversion hosts.
-
-include::modules/proc_Creating_rhv_conversion_hosts.adoc[leveloffset=+1]
-include::modules/proc_Configuring_rhv_conversion_hosts.adoc[leveloffset=+1]
