Discovery section written in rough.

--- a/doc-V2V_Guide/cfme/doc/assembly_Planning.adoc
+++ b/doc-V2V_Guide/cfme/doc/assembly_Planning.adoc
@@ -1,22 +1,22 @@
 [[Planning]]
 = Planning
 
-A well-planned migration is critical for success. During the planning process, you should focus on the following tasks:
+During the planning process, focus on the following:
 
-* Create playbooks to automate pre-migration tasks.
-* Create migration groups, taking the following into consideration:
+* Create migration groups, so that you are not migrating all of your virtual machines at the same time. The following questions provide guidelines:
 
-** How are the virtual machines grouped?
+** How are the virtual machines grouped now?
 ** Which virtual machines should be migrated together?
 ** What workloads should be migrated together?
 ** What applications must remain available?
 
-* Schedule your migration, to minimize the impact on your users.
+* Schedule your migration carefully, to minimize the impact on your users.
 
 [discrete]
 == Best Practices
 
-* Keep linked applications together and migrate at the same time.
+* Keep linked applications together, so that they migrate at the same time.
+
 * Consider which parts of the workload to migrate first:
 
 ** Databases
@@ -25,8 +25,13 @@ A well-planned migration is critical for success. During the planning process, y
 ** Load balancers
 
 * Move critical applications during maintenance windows.
+
 * Plan for redundancy.
+
 * Ensure that you have sufficient space for the migration. The migration process does not delete the original virtual machines.
-* Stagger migration schedules.
+
+* Stagger the migration schedules.
+
 * Prepare your users for downtime.
-* Minimize the impact on your environment, possibly by throttling bandwidth usage.
+
+* Minimize the impact on your environment, by creating multiple migration plans to control and throttle the migration process.
