--- a/doc-V2V_Guide/cfme/doc/con_Discovery.adoc
+++ b/doc-V2V_Guide/cfme/doc/con_Discovery.adoc
@@ -1,28 +1,32 @@
 [id="Discovery"]
 = Discovery
 
-Discovery is the high-level planning of your migration. At this stage, you will formulate a migration goal, for example, "I want to migrate 2000 virtual machines, with 200 TB of data, in less than 6 months."
+Discovery is the high-level planning of your migration. At this stage, you will formulate a specific migration goal, for example, "I want to migrate 2000 virtual machines, with 200 TB of data, in less than 6 months." To achieve this goal, you need to discover your current environment
 
-In order to achieve this goal, you will need to discover your current environment and ask the following questions:
+The following questions will guide you through the discovery process:
 
 * What am I migrating?
 +
-You will need to identify the hosts and virtual machines for migration. If your deployment is large and complex, you will probably divide your resources into migration groups.
+Identify the hosts and virtual machines to be migrated. If your deployment is large and complex, you may want to divide your resources into migration groups.
 
-* Scaling
+* What is the maximum number of resources that I can migrate?
 +
-TBD: What are the minimum and maximum size migrations? At least a note about max size
+There is no maximum size for migration. However, you may not want to migrate all your virtual machines at the same time, in order to minimize the impact on your users.
 
 * What resources will my target environment require?
 +
-Your target environment must be large enough to hold the migrated virtual machines, in addition to the VMware virtual machines (the VMware virtual machines will not be affected by the migration process, in case you need to roll back the migration for any reason).
+Your target environment must be large enough to hold the migrated virtual machines, in addition to the original VMware virtual machines. The VMware virtual machines are not affected by the migration process. Their power state after the migration will be the same as before the migration.
 
-* Identifying resource gaps (What am I missing? Ex: bandwidth, storage, licenses, maintenance window) - a reminder
+* What am I missing?
++
+Identify resource gaps, such as bandwidth, storage, licenses, or a suitable maintenance window.
 
 * How long will the migration take?
 +
-There are no hard and fast rules to determine how long the actual migration will take. This is determined on a case-by-case basis. It may be possible to do a phased migration of your applications, if they are distributed in a high availability architecture, without downtime at the application layer.
+There are no hard and fast rules to determine how long the actual migration will take. This is determined on a case-by-case basis. It may be possible to do a phased migration of your applications, if they are distributed in a high-availability architecture, without downtime at the application layer.
 
 * What impact will the migration have on my users?
 +
-Will the migration disrupt the production environment? Will users lack access to critical applications?
+Assess the effect the migration may have on a production environment. Check whether users will lose access to critical applications.
+
+The answers that you receive during the discovery stage will prepare you for the planning stage.
