--- a/doc-V2V_Guide/cfme/doc/assembly_Installation.adoc
+++ b/doc-V2V_Guide/cfme/doc/assembly_Installation.adoc
@@ -4,3 +4,5 @@
 include::modules/con_Prerequisites.adoc[leveloffset=+1]
 include::modules/proc_Creating_rhv_conversion_hosts.adoc[leveloffset=+1]
 include::modules/proc_Configuring_rhv_conversion_hosts.adoc[leveloffset=+1]
+
+After you have installed and configured the migration environment, you are ready to begin the discovery phase.
