--- a/doc-V2V_Guide/cfme/doc/con_Introduction.adoc
+++ b/doc-V2V_Guide/cfme/doc/con_Introduction.adoc
@@ -9,16 +9,27 @@
 [[Introduction]]
 = Introduction
 
-{product-title} is Red Hat's solution for moving your virtual machines from VMware to Red Hat Virtualization. By moving from VMware to Red Hat Virtualization, you can reduce licensing costs and dependence on proprietary virtualization, while investing in transformative technologies such as multi-cloud management, automation, and containers.
+{product-title} is Red Hat's solution for moving your virtual machines from VMware to Red Hat Virtualization.
 
 Red Hat Virtualization (RHV) is an enterprise-grade virtualization platform built on Red Hat Enterprise Linux. With Red Hat Virtualization, you can manage your entire virtual infrastructure, including hosts, virtual machines, networks, storage, and users, from a centralized graphical user interface or with a REST API.
 
 The infrastructure migration is performed with Red Hat CloudForms. CloudForms is a user interface, providing the control and automation required to manage challenging enterprise environments.
 
-The infrastructure migration has 4 key stages:
+The infrastructure migration process has 4 key phases:
 
-* Prerequisites: Installing Red Hat Virtualization, Red Hat Virtualization Host, and Red Hat CloudForms. Creating and configuring RHV conversion hosts.
-* Discovery: Discovering your environment.
-* Planning: Planning the migration.
-* Migration: Creating an infrastructure mapping. Creating and running a migration plan.
-* Troubleshooting: Dealing with common issues or mistakes.
+* Prerequisites:
+** Installing Red Hat Virtualization, Red Hat Virtualization Host, and Red Hat CloudForms.
+** Creating and configuring RHV conversion hosts.
+
+* Discovery:
+** Discovering your environment.
+** Planning your migration.
+** Best Practices.
+
+* Planning:
+** Creating an infrastructure mapping.
+** Creating and running a migration plan.
+
+* Migration:
+** Migration workflow.
+** Troubleshooting.
