--- a/doc-V2V_Guide/cfme/doc/assembly_Migration.adoc
+++ b/doc-V2V_Guide/cfme/doc/assembly_Migration.adoc
@@ -1,6 +1,7 @@
 [[Migration]]
 = Migration
 
+This section describes the actual migration process, while you are running the migration plan.
+
 include::modules/con_Migration_overview.adoc[leveloffset=+1]
-include::modules/proc_Creating_an_Infrastructure_Mapping.adoc[leveloffset=+1]
-include::modules/proc_Creating_and_Running_a_Migration_Plan.adoc[leveloffset=+1]
+include::modules/con_Troubleshooting.adoc[leveloffset=+1]
