--- a/doc-V2V_Guide/cfme/doc/assembly_Planning.adoc
+++ b/doc-V2V_Guide/cfme/doc/assembly_Planning.adoc
@@ -1,37 +1,10 @@
 [[Planning]]
 = Planning
 
-During the planning process, focus on the following:
+The planning phase of the migration has 2 key stages:
 
-* Create migration groups, so that you are not migrating all of your virtual machines at the same time. The following questions provide guidelines:
+* Creating an infrastructure mapping.
+* Creating and running a migration plan.
 
-** How are the virtual machines grouped now?
-** Which virtual machines should be migrated together?
-** What workloads should be migrated together?
-** What applications must remain available?
-
-* Schedule your migration carefully, to minimize the impact on your users.
-
-[discrete]
-== Best Practices
-
-* Keep linked applications together, so that they migrate at the same time.
-
-* Consider which parts of the workload to migrate first:
-
-** Databases
-** Applications
-** Web servers
-** Load balancers
-
-* Move critical applications during maintenance windows.
-
-* Plan for redundancy.
-
-* Ensure that you have sufficient space for the migration. The migration process does not delete the original virtual machines.
-
-* Stagger the migration schedules.
-
-* Prepare your users for downtime.
-
-* Minimize the impact on your environment, by creating multiple migration plans to control and throttle the migration process.
+include::modules/proc_Creating_an_Infrastructure_Mapping.adoc[leveloffset=+1]
+include::modules/proc_Creating_and_Running_a_Migration_Plan.adoc[leveloffset=+1]
