--- a/doc-V2V_Guide/cfme/doc/con_Discovery.adoc
+++ b/doc-V2V_Guide/cfme/doc/con_Discovery.adoc
@@ -29,4 +29,35 @@ There are no hard and fast rules to determine how long the actual migration will
 +
 Assess the effect the migration may have on a production environment. Check whether users will lose access to critical applications.
 
-The answers that you receive during the discovery stage will prepare you for the planning stage.
+[discrete]
+== Best Practices
+
+* Create migration groups, so that you are not migrating all of your virtual machines at the same time. The following questions provide guidelines:
+
+** How are the virtual machines grouped now?
+** Which virtual machines should be migrated together?
+** What workloads should be migrated together?
+** What applications must remain available?
+
+* Consider which parts of the workload to migrate first:
+
+** Databases
+** Applications
+** Web servers
+** Load balancers
+
+* Keep linked applications together, so that they migrate at the same time.
+
+* Schedule your migration carefully, to minimize the impact on your users.
+
+* Stagger the migration schedules.
+
+* Move critical applications during maintenance windows.
+
+* Plan for redundancy.
+
+* Ensure that you have sufficient space for the migration. The migration process does not delete the original virtual machines.
+
+* Minimize the impact on your environment, by creating multiple migration plans to control and throttle the migration process.
+
+* Prepare your users for downtime.
