--- a/doc-V2V_Guide/cfme/doc/modules/con_Migration_overview.adoc
+++ b/doc-V2V_Guide/cfme/doc/modules/con_Migration_overview.adoc
@@ -1,13 +1,13 @@
 [id="Migration_overview"]
-= Migration overview
+= Workflow
 
-The following diagram (TBD) provides a high-level view of the migration process.
+The following diagram (TBD) provides a high-level view of the infrastructure migration workflow. An understanding of this workflow will greatly simplify troubleshooting.
 
 // image:IMS_migration.png[]
 
 . The Infrastructure Admin creates an infrastructure mapping and a virtual machine migration plan in CloudForms and runs the migration plan.
 . CloudForms locates the virtual machines to be migrated based on the infrastructure mapping.
-. The ESXi host fingerprint is captured for authentication during the conversion process virtual machine conversion if the VDDK transport method is used. If SSH is used, a shared SSH key is used to connect to the ESX host where the virtual machine resides.
+. The ESXi host fingerprint is captured for authentication during the conversion process if the VDDK transport method is used. If SSH is used, a shared SSH key is used to connect to the ESX host where the virtual machine resides.
 . Using the RHV attributes for the target environment, CloudForms initiates communication with the RHV conversion host.
 . The RHV conversion host connects to the source datastore through the ESX host, using  `virt-v2v-wrapper.py`, and streams the disk to be converted to the target data domain chosen in the infrastructure mapping using `virt-v2v`.
 . After the disk is converted, the target virtual machine is created in RHV. During creation, the target virtual machine uses the source virtual machine’s metadata to maintain the virtual machine’s attributes after migration.
