--- a/doc-V2V_Guide/cfme/doc/modules/proc_Creating_and_Running_a_Migration_Plan.adoc
+++ b/doc-V2V_Guide/cfme/doc/modules/proc_Creating_and_Running_a_Migration_Plan.adoc
@@ -40,6 +40,8 @@ If you are migrating a small number of virtual machines, follow the procedure be
 
 . Select the virtual machines to migrate and click *Next*.
 
+. *(%AP: TBD: Ansible pre and post playbooks with link to https://access.redhat.com/documentation/en-us/red_hat_cloudforms/4.6/html-single/creating_a_service_in_cloudforms_for_virtual_machine_provisioning/)*
+
 . Select *Start Migration Immediately* and click *Create*.
 
 . Click *Close*. The migration plan may take some time to complete. *In Progress Plans*, the status of the datastores and VMs, and the elapsed time are displayed.
